fixes parsing error in set alarm javascript

--- a/web/set_alarm.html
+++ b/web/set_alarm.html
@@ -84,7 +84,7 @@
             var shouldBeAsync = true;
             request.open("POST", "/set_alarm", shouldBeAsync);
             request.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-            request.send("timestamp","12");
+            request.send("timestamp=12");
 
         }
 
