reorganises control system

--- a/crates/brain/web/set_alarm.html
+++ b/crates/brain/web/set_alarm.html
@@ -28,7 +28,7 @@
 
 
         function display_alarm_success() {         
-            document.write("alarm set succesfully");
+            document.write("alarm set successfully");
         }
         function display_alarm_fail() {
             document.write("alarm set failed!!!!");
